-moved shared functions into shared.c file
-moved from simple doubling/halving zoom to smooth zoom. also more 
 efficient as it uses a nearest neighbor algorithm rather than 
 averaging, so repeated zooming doesnt continue to degrade performance.
-fixed thumbnail so that it works at all zoom levels
-added import function to automatically find and match up pairs
-added several keyboard commands from WallView so that the two behave 
 similarly
-added spec file for building RPMs
-improved thumbnail rendering so that image doesnt 'blow up' and stays 
 confined to the set thumb_size x thumb_size area
-added command line option to change thumbnail size

0.7.3:
-fixed bug with cropping in aligner mode
-added thumbnail view to aligner mode
-added '-n' command line option to disable thumbnails
-added '--off [x offset][y offset]' command line argument to specify 
 offset of right image relative to left.
-added longer versions of each command line option for better 
 readability in scripts. see 'viewer -h' or the man page for more info.
-added multi-file inputs either via command line (by chaining multiple 
 -i, -m, -v, or -a options (with offsets where applicable)) or via the 
 new -f option to read filenames and offsets from a file. this feature 
 is based upon the work of Nathan Weeks <weeks@usgs.gov> at the EROS
 Data Center. Thanks for the input!
-updated the manpage and README to reflect new options

0.7.2:
-fixed small bug with clipping and zoom
-fixed small bug in align keyboard code
-re-added mouse functionality for align code (left button moves image)
-improved mouse functionality for align code (middle button moves both)

0.7.1:
-few minor bug fixes
-fixed builds for Darwin

0.7.0:
-made alignment function secondary, viewer function primary and because
 of this expanded upon the viewer functionality and simplified some of
 it's key interaction

0.6.1:
-preparation for mass distribution
-added AUTHORS, COPYING, ChangeLog, README files
-added more comments in source